--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
         <a href="#section3" style="text-decoration: none;font-size:2vw;color:#000;">跳到第三部分</a>
         <space>&nbsp;&nbsp;</space>
         <language>
-          <a href="https://lucas-0714.github.io/zh-TW/" style="text-decoration: none;font-size:2vw;color:#000;"><span class="material-symbols-outlined">
-            language
-          </span></a>
+          <a href="https://lucas-0714.github.io/zh-TW/">
+            <span class="material-symbols-outlined">
+              language
+            </span>
+          </a>
         </language>
         <space>&nbsp;&nbsp;</space>
-        <a href="https://lucas-0714.github.io/login/login.html" style="text-decoration:none;">
+        <a href="https://lucas-0714.github.io/login/login.html">
           <span class="material-symbols-outlined">
             account_circle
           </span>
