--- a/index.html
+++ b/index.html
@@ -36,16 +36,12 @@
         <space>&nbsp;&nbsp;</space>
         <language>
           <a href="https://lucas-0714.github.io/zh-TW/">
-            <span class="material-symbols-outlined">
-              language
-            </span>
+            <img src="https://lucas-0714.github.io/storage/icon/language.png">
           </a>
         </language>
         <space>&nbsp;&nbsp;</space>
         <a href="https://lucas-0714.github.io/login/login.html">
-          <span class="material-symbols-outlined">
-            account_circle
-          </span>
+          <img src="https://lucas-0714.github.io/storage/icon/account_circle.png">
         </a>
         <spaces>&nbsp;&nbsp;&nbsp;</spaces>
       </div>
